k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: country-info
  labels:
    app.kubernetes.io/part-of: country-info
